syntax = "proto2";

package com.ant.protoTest;

option java_package = "com.ant.fourDemo";
option java_outer_classname = "PersonInfo";

message MyMessage{
    enum DataType{
        PersonType = 1;
        Dog = 2;
        Cat = 3;
    }
    required DataType data_type = 1;
    oneof dataBody{
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Person{
    optional string id = 1;
    optional string name = 2;
}

message Dog{
    optional string name = 1;
    optional int32 age = 2;
}

message Cat{
    optional string name = 1;
    optional int32 age = 2;
}